--- a/AUTHORS
+++ b/AUTHORS
@@ -11,6 +11,7 @@
 # Please keep the list sorted.
 
 Cedric Kienzler
+Christoph Petrausch
 Daniel Czerwonk
 Oliver Herms
-Christoph Petrausch
+Serge Bazanski
